--- a/portfolio.html
+++ b/portfolio.html
@@ -58,12 +58,12 @@
                         <div class='portfolioRow2'>
                             <div class='portfolio3'>
                                     <img src="assets/images/hw1_0005_Screenshot-2016-01-25-16.42.12.png">
-                                    <a href='#'         class='picture'>Trivia Game
+                                    <a href='https://honestgraphics.github.io/TrivaGame/'         class='picture'>Trivia Game
                                     </a>
                             </div>
                             <div class='portfolio4'>
                                     <img src="assets/images/hw1_0000_download-(1).png">
-                                    <a href='#'         class='picture'>Rutgers Info Widget
+                                    <a href='https://honestgraphics.github.io/GifTastic/'         class='picture'>Giftastic
                                     </a>
                             </div>
                         </div>
